Große Umstellungen im Template (Texte, Menüposition)

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,13 +2,15 @@ html, body {
 	background-color: #999966;
 	margin: 0;
 	padding: 0;
-	font-family: Arial, sans-serif;
-	font-size: 11px;
+	font-family: "lucida grande", tahoma, verdana, arial, sans-serif;
+	font-size: 13px;
+	line-height: 180%;
 	color: #333333;
 }
 
 h1#title {
-	font: bold 18px times new roman;
+	font-weight: bold;
+	font-size: 20px;
 	letter-spacing: 0.4em;
 	margin: 10px 10px 10px 15px;
 	padding-top: 5px;
@@ -20,41 +22,15 @@ h1#title a {
 	text-decoration: none;
 }
 
-div#menu {
-	border-top: 1px solid white;
-	border-bottom: 1px solid white;
-	background-color: #a4c2c2;
-	height: 36px;
-}
-
-div#menu a {
-	margin-left: 20px;
-	font-family: Arial, sans-serif;
-	font-size: 10px;
-	color: #336666;
-	vertical-align: middle;
-	line-height: 36px;
-	letter-spacing: 0.1em;
-	text-decoration: underline;
-}
-
-div#menu a.active {
-	font-weight: bold;
-	font-size: 11px;
-}
-
-div#menu a:hover {
-	color: #993300;
-}
-
 div#container {
 	overflow: hidden;
 	border-bottom: 1px solid white;
+	border-top: 1px solid white;
 	background: white url(images/description_background.gif) repeat-y;
 }
 
 div#inner_container {
-	width: 880px;
+	margin-left: 230px;
 }
 
 div#description {
@@ -66,9 +42,40 @@ div#description span {
 	display: block;
 	margin: 20px;
 	text-align: justify;
-	font-family: georgia, serif;
-	font-size: 12px;
-	line-height: 18px;
+ 	line-height: 18px;
+	color: #336666;
+}
+
+div#menu {
+	background-color: #a4c2c2;
+	height: 36px;
+	margin-left: 1px;
+}
+
+div#menu a {
+	padding-left: 10px;
+	padding-right: 10px;
+	color: #336666;
+	vertical-align: middle;
+	line-height: 36px;
+	letter-spacing: 0.1em;
+	text-decoration: none;
+	font-weight: normal;
+	display: block;
+	float: left;
+	height: 36px;
+}
+
+div#menu a.active {
+	font-weight: bold;
+	background-color: #fff;
+}
+
+div#menu a:hover {
+	color: #993300;
+}
+
+div#menu a.active:hover {
 	color: #336666;
 }
 
