--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,6 @@ h1#title a {
 }
 
 div#container {
-	overflow: hidden;
 	border-bottom: 1px solid white;
 	border-top: 1px solid white;
 	background: white url(images/description_background.gif) repeat-y;
@@ -81,13 +80,22 @@ div#menu a.active:hover {
 
 div#content {
 	float: left;
-	padding: 30px 50px 50px;
-	width: 550px;
+	padding: 20px;
+	width: 723px;
 }
 
 div#content h1 {
 	color: #CC3300;
 	font-size: 20px;
+	font-family: georgia, serif;
+	letter-spacing: 0.1em;
+	font-weight: normal;
+	margin-bottom: 10px;
+}
+
+div#content h2 {
+	color: #CC3300;
+	font-size: 16px;
 	font-family: georgia, serif;
 	letter-spacing: 0.1em;
 	font-weight: normal;
@@ -114,4 +122,17 @@ div#content li {
 	margin-left: 5px;
 	margin-top: 2px;
 	margin-bottom: 2px;
+}
+
+h3,
+strong {
+	font-weight: bold;
+}
+
+.csc-mailform li {
+	list-style: none !important;
+}
+
+.csc-mailform input[type=submit] {
+	padding: 5px;
 }
