CSS mit normalize.css

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -1,3 +1,5 @@
+@import "_normalize";
+
 html, body {
 	background-color: #999966;
 	margin: 0;
@@ -31,7 +33,7 @@ div#container {
 	position: relative;
 	border-bottom: 1px solid white;
 	border-top: 1px solid white;
-	background: white url(images/description_background.gif) repeat-y;
+	background: white url(../images/description_background.gif) repeat-y;
 }
 
 div#inner_container {
