--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -606,6 +606,7 @@ strong {
 #footer .spacer {
   position: absolute;
   left: 0px;
+  top: 0px;
   height: 100%;
   background-color: #fff;
   width: 1px;
