--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -162,6 +162,7 @@ strong {
 	.spacer {
 		position: absolute;
 		left: 0px;
+		top: 0px;
 		height: 100%;
 		background-color: #fff;
 		width: 1px;
