Use FontSquirrel local fonts instead of Google Webfonts

--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -1,7 +1,8 @@
 @import "_normalize";
+@import "_fonts";
 
-@sans-font: "Open Sans", sans-serif;
-@serif-font: "Libre Baskerville", sans-serif;
+@sans-font: "open_sans", sans-serif;
+@serif-font: "droid_serif", sans-serif;
 
 @red: #C00;
 @turquois-dark: #336666;
