--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -1,3 +1,7 @@
+@import (less) "../js/fancybox/jquery.fancybox.min.css";
+@import (less) "../js/fancybox/helpers/jquery.fancybox-buttons.min.css";
+@import (less) "../js/fancybox/helpers/jquery.fancybox-thumbs.min.css";
+
 @import "_normalize";
 @import "_fonts";
 
