--- a/css/stylesheet.less
+++ b/css/stylesheet.less
@@ -1,6 +1,6 @@
-@import (less) "../js/fancybox/jquery.fancybox.min.css";
-@import (less) "../js/fancybox/helpers/jquery.fancybox-buttons.min.css";
-@import (less) "../js/fancybox/helpers/jquery.fancybox-thumbs.min.css";
+@import (less) "../js/fancybox/jquery.fancybox.css";
+@import (less) "../js/fancybox/helpers/jquery.fancybox-buttons.css";
+@import (less) "../js/fancybox/helpers/jquery.fancybox-thumbs.css";
 
 @import "_normalize";
 @import "_fonts";
